# rt-plots

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: default_dashboard.json  grafana.ini  sample.env  setup-grafana.sh
service/: docker-compose.yml
src/: __main__.py
src/sim/: __main__.py  app.py  config.py  data_model.py  db_client.py  rest_api.py  simulator.py  statistics.py  utils.py  web_apis.py  web_server.py
src/sim/static/: index.html
src/sim/templates/: index.html
src/templates/: index.html
