[tool.poetry]
name = "rt-plots"
version = "0.1.0"
description = ""
authors = ["tmatrixhy <xitram@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
flask = "^3.0.3"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
