[tool.poetry]
name = "rt-plots"
version = "0.2.0"
description = ""
authors = ["tmatrixhy <xitram@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pydantic = "^2.8.2"
sqlmodel = "^0.0.21"
psycopg2 = "^2.9.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
websockets = "^13.0.1"
hypercorn = "^0.17.3"
python-socketio = "^5.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
